--- a/overMij/index.html
+++ b/overMij/index.html
@@ -1,10 +1,34 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>About</title>
+        <title>Over Florian</title>
         <link rel="stylesheet" href="overMij.css">
     </head>
     <body>
-        over mij
+     <div id="container">
+      <div class="overmijzelf">
+         <h2>Florian</h2>
+          <img src="Hockey.jpg" >
+          <br>14 jaar oud
+          <br> Woonplaats: <a href="https://nl.wikipedia.org/wiki/Groningen_(stad)" target="_blank">Groningen</a>
+         <p>Ik zit op de school CSG augustinus in de 4e klas. Vorig jaar heb ik een vakkenpakket moeten kiezen, ik heb voor het vakkenpakket Natuur en techniek gekozen met economie in het keuzedeel.
+            <br>
+            <br>In mijn vrije tijd hockey ik graag, ik train op dinsdag en donderdag. Ik speel al zo'n 6 jaar hockey. Daarnaast Game ik ook nog weleens en doe graag dingen met mijn vrienden.
+         </p>
+        </div>
+        <div class="vakantie">
+          <h3>Mijn favoriete vakantie land</h3>
+    
+        </div>
+         <div class="Gezin">
+          <h3>Mijn Gezin:</h3>
+           <ul>
+            <li>Vader Jeroen</li>
+            <li>Moeder Astrid</li>
+            <li>Zus Maartje</li>
+            <li>Kleine Broertje Jochem</li>
+           </ul>
+      </div>  
+     </div>
     </body>
 </html>
