--- a/PO/index.html
+++ b/PO/index.html
@@ -6,10 +6,11 @@
         <link rel="stylesheet" href="css/vormgeving.css">
     </head>
     <body>
-        <div id="container">
-            <h1>startpagina PO</h1>
-            <img src="images/vogel.jpg" id="vogel" alt="dierentuinvogel"/>
-            <p>Hier maak je straks je PO.</p>
+        <div id="containernavigatiebalk">
+           <a href="index.html"><div class="navigatiebalk">Flachau</div></a>
+           <div class="navigatiebalk">Skiën</div>
+           <div class="navigatiebalk">Ski Amade</div>
+           <div class="navigatiebalk">Accomodaties</div>
         </div>
     </body>
 </html>
