--- a/overMij/index.html
+++ b/overMij/index.html
@@ -18,7 +18,13 @@
         </div>
         <div class="vakantie">
           <h3>Mijn favoriete vakantie land</h3>
-    
+           <img src="Vakantie.png" id="vakantiefoto">
+           <p>Ik heb 2 favoriete vakantielanden:
+            <br>
+            <br>Oosterijk voor de kerst of de voorjaarsvakantie aangezien we dan op wintersport gaan.
+            <br>
+            <br>Italie voor de vakanties in de zomermaanden, ik hou van het landschap, het eten en de rustige sfeer.
+          </p>
         </div>
          <div class="Gezin">
           <h3>Mijn Gezin:</h3>
