--- a/PO/Homepage.html
+++ b/PO/Homepage.html
@@ -2,13 +2,14 @@
 <html lang="nl">
     <head>
         <meta charset="utf-8">
-        <title>titel</title>
+        <title>Flachau</title>
+        <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="css/vormgeving.css">
     </head>
     <body> 
-        <div id="containernavigatiebalk">
+        <div class="containers" id="containernavigatiebalk">
            <a href="Homepage.html"><div id="homebutton"><img src="images/flachaulogo.png" id="flachaulogo"></div></a>
-           <a href="Skieen.html"><div class="navigatiebalk">Skiën</div></a>
+           <a href="Skien.html"><div class="navigatiebalk">Skiën</div></a>
            <a href="SkiAmade.html"><div class="navigatiebalk">Ski Amade</div></a>
            <a href="Accomodaties.html"><div class="navigatiebalk">Accomodaties</div></a>
         </div>
@@ -17,6 +18,16 @@
         </div>
         <div id="containerwelkomtekst">
             WELKOMTEKST
+        </div>
+        <div class="containers" id="containerinfoblokken">
+            <div class="Homepageinfoblokken"></div>
+            <div class="Homepageinfoblokken"></div>
+            <div class="Homepageinfoblokken"></div>
+            <div class="Homepageinfoblokken"></div>
+            <div class="Homepageinfoblokken"></div>
+        </div>
+        <div id="containerkaart">
+            Kaartje
         </div>
     </body>
 </html>
