--- a/PO/Homepage.html
+++ b/PO/Homepage.html
@@ -68,8 +68,8 @@
                 </div>
             </div>
         </div>
-        <div id="containerkaart">
-            Kaartje
+        <div id="containerkaart" class="containers">
+            <div id="">
         </div>
     </body>
 </html>
