--- a/PO/Homepage.html
+++ b/PO/Homepage.html
@@ -69,7 +69,10 @@
             </div>
         </div>
         <div id="containerkaart" class="containers">
-            <div id="">
+            <div id="kaarttekst" class="pistekaartmetinfo"></div>
+            <div id="kaartimg" class="pistekaartmetinfo">
+                <!-- <img src="images/Pistekaart-Flachau.jpg" id="pistekaart"> -->
+            </div>
         </div>
     </body>
 </html>
