--- a/PO/Homepage.html
+++ b/PO/Homepage.html
@@ -69,9 +69,17 @@
             </div>
         </div>
         <div id="containerkaart" class="containers">
-            <div id="kaarttekst" class="pistekaartmetinfo"></div>
-            <div id="kaartimg" class="pistekaartmetinfo">
-                <!-- <img src="images/Pistekaart-Flachau.jpg" id="pistekaart"> -->
+            <div class="pistekaartmetinfo" id="containerinfokaart">
+                <div class="infokaart" id="infokaart1">120 km piste totaal</div>
+                <div class="infokaart">34 km blauwe piste</div>
+                <div class="infokaart">82 km rode piste</div>
+                <div class="infokaart">4 km zwarte piste</div>
+                <div class="infokaart">Dal: 740 m - Top: 1980 m</div>
+                <div class="infokaart">12 gondels | 16 stoelliften | 16 sleepliften</div>
+                <div class="infokaart" id="infokaart7">995 km v.a. Utrecht | reistijd: 10:15 uur</div>
+            </div>
+            <div class="pistekaartmetinfo">
+                <a href="images/Pistekaart-Flachau.jpg" target="_blank"><img src="images/Pistekaart-Flachau.jpg" id="pistekaart"></a> </div>
             </div>
         </div>
     </body>
