--- a/PO/Homepage.html
+++ b/PO/Homepage.html
@@ -69,17 +69,17 @@
             </div>
         </div>
         <div id="containerkaart" class="containers">
-            <div class="pistekaartmetinfo" id="containerinfokaart">
-                <div class="infokaart" id="infokaart1">120 km piste totaal</div>
-                <div class="infokaart">34 km blauwe piste</div>
-                <div class="infokaart">82 km rode piste</div>
-                <div class="infokaart">4 km zwarte piste</div>
-                <div class="infokaart">Dal: 740 m - Top: 1980 m</div>
-                <div class="infokaart">12 gondels | 16 stoelliften | 16 sleepliften</div>
-                <div class="infokaart" id="infokaart7">995 km v.a. Utrecht | reistijd: 10:15 uur</div>
+            <div class="pistekaartmetinfo" id="containerinfobijkaart">
+                <div class="infokaart" id="infokaart1"><img src="images/icons/Ski_icon.png" class="icons">120 km piste totaal</div>
+                <div class="infokaart pistekleurtekst" id="infokaart2">34 km blauwe piste</div>
+                <div class="infokaart pistekleurtekst" id="infokaart3">82 km rode piste</div>
+                <div class="infokaart pistekleurtekst" id="infokaart4">4 km zwarte piste</div>
+                <div class="infokaart"><img src="images/icons/Mountain_icon.png" class="icons"><h4>Dal:</h4>740 m - <h4>Top:</h4>1980 m</div>
+                <div class="infokaart"><img src="images/icons/Lift_icon.png" class="icons">12 gondels | 16 stoelliften | 16 sleepliften</div>
+                <div class="infokaart" id="infokaart7"><img src="images/icons/Car_icon2.png" class="icons">995 km v.a. Utrecht | reistijd: 10:15 uur</div>
             </div>
             <div class="pistekaartmetinfo">
-                <a href="images/Pistekaart-Flachau.jpg" target="_blank"><img src="images/Pistekaart-Flachau.jpg" id="pistekaart"></a> </div>
+                <a href="images/Pistekaart-Flachau.jpg" target="_blank"><img src="images/Pistekaart-Flachau.jpg" id="pistekaart"></a>
             </div>
         </div>
     </body>
