04/11/2025 Homepage af behalve infoblokken

--- a/PO/Accomodaties.html
+++ b/PO/Accomodaties.html
@@ -6,13 +6,22 @@
         <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="css/vormgeving.css">
     </head>
-    <body>
+    <header>
         <div class="containers" id="containernavigatiebalk">
            <a href="Homepage.html"><div id="homebutton"><img src="images/flachaulogo.png" id="flachaulogo"></div></a>
            <a href="Skien.html"><div class="navigatiebalk">Skiën</div></a>
            <a href="SkiAmade.html"><div class="navigatiebalk">Ski Amade</div></a>
            <a href="Accomodaties.html"><div class="navigatiebalk">Accomodaties</div></a>
         </div>
+    </header>  
+    <body>
        <h1>Accomodaties</h1>
     </body>
+    <footer>
+        <div id="footerlijn"></div>
+        <div id="footertekst">
+            <div class="footertekst">© Florian Wehmeijer</div>
+            <a href="Colofon.Florian Wehmeijer.A4b.txt" target="_blank"><div class="footertekst" id="linkcolofon">Colofon</div></a>
+        </div>
+    </footer>
 </html>
