--- a/PO/Skien.html
+++ b/PO/Skien.html
@@ -6,13 +6,38 @@
         <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="css/vormgeving.css">
     </head>
-    <body>
-      <div class="containers" id="containernavigatiebalk">
+    <header>
+        <div class="containers" id="containernavigatiebalk">
            <a href="Homepage.html"><div id="homebutton"><img src="images/flachaulogo.png" id="flachaulogo"></div></a>
            <a href="Skien.html"><div class="navigatiebalk">Skiën</div></a>
            <a href="SkiAmade.html"><div class="navigatiebalk">Ski Amade</div></a>
            <a href="Accomodaties.html"><div class="navigatiebalk">Accomodaties</div></a>
         </div>
-       <h1>SKIEEN</h1>
+    </header>  
+    <body>
+        <div class="containerfoto" id="containerfotoskien">
+           <img src="images/SkiFoto2.jpg">
+        </div>
+        <div class="containertekstinleiding standaardcontainer">
+            <h2>Skiën in Flachau</h2>
+            <p><strong>Beleef de ultieme wintersport in het hart van Ski Amadé!</strong></p>
+            <p>Huur eenvoudig je ski’s, koop skipassen en boek skilessen – allemaal op één plek! Of je nu beginner bent of door de poedersneeuw wilt carven, Flachau biedt plezier voor elk niveau.</p>
+        </div>
+        <div class="standaardcontainer">
+            Skis huren
+        </div>
+        <div class="standaardcontainer">
+            ski passen
+        </div>
+        <div class="standaardcontainer">
+            skilessen
+        </div>
     </body>
+    <footer>
+        <div id="footerlijn"></div>
+        <div id="footertekst">
+            <div class="footertekst">© Florian Wehmeijer</div>
+            <a href="Colofon.Florian Wehmeijer.A4b.txt" target="_blank"><div class="footertekst" id="linkcolofon">Colofon</div></a>
+        </div>
+    </footer>
 </html>
