--- a/PO/Homepage.html
+++ b/PO/Homepage.html
@@ -72,7 +72,7 @@
         </div>
         <div id="containerkaart" class="containers standaardcontainer">
             <div class="pistekaartmetinfo" id="containerinfobijkaart">
-                <div class="infokaart" id="infokaart1"><img src="images/icons/Ski_icon.png" class="icons">120 km piste totaal</div>
+                <div class="infokaart" id="infokaart1"><img src="images/icons/Ski_icon.png" class="iconskaart">120 km piste totaal</div>
                 <div class="infokaart pistekleurtekst" id="infokaart2">
                     <div class="kmpiste">34 km blauwe piste</div>
                     <div class="procentpiste">29%</div>
@@ -85,11 +85,11 @@
                     <div class="kmpiste">4 km zwarte piste</div>
                     <div class="procentpiste">2%</div>
                 </div>
-                <div class="infokaart"><img src="images/icons/Mountain_icon.png" class="icons"><h4>Dal:</h4>740 m - <h4>Top:</h4>1980 m</div>
+                <div class="infokaart"><img src="images/icons/Mountain_icon.png" class="iconskaart"><h4>Dal:</h4>740 m - <h4>Top:</h4>1980 m</div>
                 <div class="border"></div>
-                <div class="infokaart"><img src="images/icons/Lift_icon.png" class="icons">12 gondels | 16 stoelliften | 16 sleepliften</div>
+                <div class="infokaart"><img src="images/icons/Lift_icon.png" class="iconskaart">12 gondels | 16 stoelliften | 16 sleepliften</div>
                 <div class="border"></div>
-                <div class="infokaart" id="infokaart7"><img src="images/icons/Car_icon2.png" class="icons">995 km v.a. Utrecht | reistijd: 10:15 uur</div>
+                <div class="infokaart" id="infokaart7"><img src="images/icons/Car_icon2.png" class="iconskaart">995 km v.a. Utrecht | reistijd: 10:15 uur</div>
             </div>
             <div class="pistekaartmetinfo">
                 <a href="images/Pistekaart-Flachau.jpg" target="_blank"><img src="images/Pistekaart-Flachau.jpg" id="pistekaart"></a>
