--- a/PO/Skien.html
+++ b/PO/Skien.html
@@ -23,14 +23,19 @@
             <p><strong>Beleef de ultieme wintersport in het hart van Ski Amadé!</strong></p>
             <p>Huur eenvoudig je ski’s, koop skipassen en boek skilessen – allemaal op één plek! Of je nu beginner bent of door de poedersneeuw wilt carven, Flachau biedt plezier voor elk niveau.</p>
         </div>
-        <div class="standaardcontainer">
-            Skis huren
-        </div>
-        <div class="standaardcontainer">
-            ski passen
-        </div>
-        <div class="standaardcontainer">
-            skilessen
+        <div class="containers">
+          <div>
+              <div><img src="images/icons/Skis_icon.png" class="iconsskien">skis huren</div>
+              <div>tekst</div>
+          </div>
+          <div>
+              <div><img src="images/icons/Ticket_icon.png" class="iconsskien">ski passen</div>
+              <div>tekst</div>
+          </div>
+          <div>
+              <div><img src="images/icons/Skiclass_icon.png" class="iconsskien">skilessen</div>
+              <div>tekst</div>
+          </div>
         </div>
     </body>
     <footer>
