--- a/PO/Homepage.html
+++ b/PO/Homepage.html
@@ -20,8 +20,10 @@
         </div>
         <div class="containertekstinleiding standaardcontainer" id="containerwelkomtekst">
             <H2>Welkom in Flachau - het hart van Ski amadé</H2>
-            <p>Ontdek mooie pistes, verse sneeuw en de vriendelijke sfeer waar Flachau om bekendstaat. Hier draait alles om plezier in de bergen: van je eerste afdaling in de ochtend tot het samen genieten in een gezellige berghut aan het eind van de dag.
-            <br>Of je nu komt om te skiën, te ontspannen of tijd door te brengen met familie en vrienden, in Flachau vind je alles voor een onvergetelijke winter. Laat je betoveren door de bergen en geniet van het echte wintergevoel.</p>
+            <p>Ontdek mooie pistes, verse sneeuw en de vriendelijke sfeer waar Flachau om bekendstaat. Hier draait alles om plezier in de bergen:
+            <br>van je eerste afdaling in de ochtend tot het samen genieten in een gezellige berghut aan het eind van de dag.
+            <br>Of je nu komt om te skiën, te ontspannen of tijd door te brengen met familie en vrienden, in Flachau vind je alles voor een onvergetelijke winter.
+            <br>Laat je betoveren door de bergen en geniet van het echte wintergevoel.</p>
         </div>
         <div class="containers" id="containerinfoblokken">
             <div class="Homepageinfoblokken">
