--- a/PO/Skien.html
+++ b/PO/Skien.html
@@ -15,26 +15,30 @@
         </div>
     </header>  
     <body>
-        <div class="containerfoto" id="containerfotoskien">
+        <div class="containerfoto containers" id="containerfotoskien">
             <img src="images/SkiFoto2.jpg">
             <div class="bannertekstskien">
             <h2>Skiën in Flachau</h2>
             <p><strong>Beleef de ultieme wintersport in het hart van Ski Amadé!</strong></p>
-            <p>Huur eenvoudig je ski’s, koop skipassen en boek skilessen – allemaal op één plek! Of je nu beginner bent of door de poedersneeuw wilt carven, Flachau biedt plezier voor elk niveau.</p>
+            <p>Huur eenvoudig je ski’s, koop skipassen en boek skilessen – allemaal op één plek! 
+            <br>Of je nu beginner bent of door de poedersneeuw wilt carven, Flachau biedt plezier voor elk niveau.</p>
             </div>
         </div>
         <div class="containers" id="containerblokskien">
           <div class="blokkenskien">
-              <!-- <div><img src="images/icons/Skis_icon.png" class="iconsskien">skis huren</div>
-              <div>tekst</div> -->
+              <div class="blokskienhoofdtekst containers"><img src="images/icons/Skis_icon.png" class="iconsskien">skis huren</div>
+              <div class="blokskientekst">tekst</div>
+              <div class="blokskienknop"></div>
           </div>
           <div class="blokkenskien">
-              <!-- <div><img src="images/icons/Ticket_icon.png" class="iconsskien">ski passen</div>
-              <div>tekst</div> -->
+              <div class="blokskienhoofdtekst containers"><img src="images/icons/Ticket_icon.png" class="iconsskien">ski passen</div>
+              <div class="blokskientekst">tekst</div>
+              <div class="blokskienknop"></div>
           </div>
           <div class="blokkenskien">
-              <!-- <div><img src="images/icons/Skiclass_icon.png" class="iconsskien">skilessen</div>
-              <div>tekst</div> -->
+              <div class="blokskienhoofdtekst containers"><img src="images/icons/Skiclass_icon.png" class="iconsskien">skilessen</div>
+              <div class="blokskientekst">tekst</div>
+              <div class="blokskienknop"></div>
           </div>
         </div>
     </body>
