--- a/PO/Homepage.html
+++ b/PO/Homepage.html
@@ -28,6 +28,7 @@
         <div class="containers" id="containerinfoblokken">
             <div class="Homepageinfoblokken">
                 <div class="plaatjeinfoblok">
+                    <img src="images/Skirent.jpeg">
                 </div>
                 <div class="tekstinfoblok">
                 </div>
@@ -37,6 +38,7 @@
             </div>
             <div class="Homepageinfoblokken">
                 <div class="plaatjeinfoblok">
+                    <img src="images/Skiaccomodaties.jpg">
                 </div>
                 <div class="tekstinfoblok">
                 </div>
@@ -46,6 +48,7 @@
             </div>
             <div class="Homepageinfoblokken">
                 <div class="plaatjeinfoblok">
+                    <img src="images/Skischool.webp">
                 </div>
                 <div class="tekstinfoblok">
                 </div>
@@ -55,6 +58,7 @@
             </div>
             <div class="Homepageinfoblokken">
                 <div class="plaatjeinfoblok">
+                    <img src="images/skipassen.webp">
                 </div>
                 <div class="tekstinfoblok">
                 </div>
@@ -64,6 +68,7 @@
             </div>
             <div class="Homepageinfoblokken">
                 <div class="plaatjeinfoblok">
+                    <img src="images/skiamade.jpg">
                 </div>
                 <div class="tekstinfoblok">
                 </div>
