--- a/PO/Skien.html
+++ b/PO/Skien.html
@@ -28,17 +28,25 @@
           <div class="blokkenskien">
               <div class="blokskienhoofdtekst containers"><img src="images/icons/Skis_icon.png" class="iconsskien">skis huren</div>
               <div class="blokskientekst">tekst</div>
-              <div class="blokskienknop"></div>
+              <div class="containerblokskienknop containers">
+                 <div class="blokskienknop">Intersport Rent Flachau</div>
+                 <div class="blokskienknop">Sport 2000 Rent</div>
+              </div>
           </div>
           <div class="blokkenskien">
               <div class="blokskienhoofdtekst containers"><img src="images/icons/Ticket_icon.png" class="iconsskien">ski passen</div>
               <div class="blokskientekst">tekst</div>
-              <div class="blokskienknop"></div>
+              <div class="containerblokskienknop containers">
+                 <div class="blokskienknop">Snow Space Salzburg<br>Skipassen</div>
+              </div>
           </div>
           <div class="blokkenskien">
               <div class="blokskienhoofdtekst containers"><img src="images/icons/Skiclass_icon.png" class="iconsskien">skilessen</div>
               <div class="blokskientekst">tekst</div>
-              <div class="blokskienknop"></div>
+              <div class="containerblokskienknop containers">
+                 <div class="blokskienknop">Schischule Flachau</div>
+                 <div class="blokskienknop">Fischi's Ski Academy</div>
+              </div>
           </div>
         </div>
     </body>
