--- a/PO/Homepage.html
+++ b/PO/Homepage.html
@@ -32,9 +32,9 @@
                 </div>
                 <div class="tekstinfoblok">
                 </div>
-                <div class="knopinfoblok">
+                <a href="Skien.html#blokskihuur"><div class="knopinfoblok">
                     knop
-                </div>
+                </div></a>
             </div>
             <div class="Homepageinfoblokken">
                 <div class="plaatjeinfoblok">
@@ -42,9 +42,9 @@
                 </div>
                 <div class="tekstinfoblok">
                 </div>
-                <div class="knopinfoblok">
+                <a href=""><div class="knopinfoblok">
                     knop
-                </div>
+                </div></a>
             </div>
             <div class="Homepageinfoblokken">
                 <div class="plaatjeinfoblok">
@@ -52,9 +52,9 @@
                 </div>
                 <div class="tekstinfoblok">
                 </div>
-                <div class="knopinfoblok">
+                <a href="Skien.html#blokskiles"><div class="knopinfoblok">
                     knop
-                </div>
+                </div></a>
             </div>
             <div class="Homepageinfoblokken">
                 <div class="plaatjeinfoblok">
@@ -62,9 +62,9 @@
                 </div>
                 <div class="tekstinfoblok">
                 </div>
-                <div class="knopinfoblok">
+                <a href="Skien.html#blokskipas"><div class="knopinfoblok">
                     knop
-                </div>
+                </div></a>
             </div>
             <div class="Homepageinfoblokken">
                 <div class="plaatjeinfoblok">
@@ -72,9 +72,9 @@
                 </div>
                 <div class="tekstinfoblok">
                 </div>
-                <div class="knopinfoblok">
+                <a href=""><div class="knopinfoblok">
                     knop
-                </div>
+                </div></a>
             </div>
         </div>
         <div id="containerkaart" class="containers standaardcontainer">
