--- a/PO/Skien.html
+++ b/PO/Skien.html
@@ -25,27 +25,27 @@
             </div>
         </div>
         <div class="containers" id="containerblokskien">
-          <div class="blokkenskien">
+          <div class="blokkenskien" id="blokskihuur">
               <div class="blokskienhoofdtekst containers"><img src="images/icons/Skis_icon.png" class="iconsskien">skis huren</div>
               <div class="blokskientekst">tekst</div>
               <div class="containerblokskienknop containers">
-                 <div class="blokskienknop">Intersport Rent Flachau</div>
-                 <div class="blokskienknop">Sport 2000 Rent</div>
+                 <a href="https://www.intersportrent.at/skirent-flachau~12478" target="_blank"><div class="blokskienknop">Intersport Rent Flachau</div></a>
+                 <a href="https://www.sport2000rent.com/nl/skiverhuur/locaties/oostenrijk/salzburg/flachau" target="_blank"><div class="blokskienknop">Sport 2000 Rent</div></a>
               </div>
           </div>
-          <div class="blokkenskien">
+          <div class="blokkenskien" id="blokskipas">
               <div class="blokskienhoofdtekst containers"><img src="images/icons/Ticket_icon.png" class="iconsskien">ski passen</div>
               <div class="blokskientekst">tekst</div>
               <div class="containerblokskienknop containers">
-                 <div class="blokskienknop">Snow Space Salzburg<br>Skipassen</div>
+                 <a href="https://www.snow-space.com/en/winter/skitickets" target="_blank"><div class="blokskienknop">Snow Space Salzburg<br>Skipassen</div></a>
               </div>
           </div>
-          <div class="blokkenskien">
+          <div class="blokkenskien" id="blokskiles">
               <div class="blokskienhoofdtekst containers"><img src="images/icons/Skiclass_icon.png" class="iconsskien">skilessen</div>
               <div class="blokskientekst">tekst</div>
               <div class="containerblokskienknop containers">
-                 <div class="blokskienknop">Schischule Flachau</div>
-                 <div class="blokskienknop">Fischi's Ski Academy</div>
+                 <a href="https://www.skischuleflachau.at/onze-skischool.html?gad_source=1&gad_campaignid=22917690841&gclid=EAIaIQobChMIj9To4ePpkAMV8ZiDBx2Fyzm3EAAYASAAEgIPnPD_BwE" target="_blank"><div class="blokskienknop">Schischule Flachau</div></a>
+                 <a href="https://www.fischis-skischule.at/nl/?gad_source=1&gad_campaignid=69419262&gclid=EAIaIQobChMIj9To4ePpkAMV8ZiDBx2Fyzm3EAAYAiAAEgJTgfD_BwE" target="_blank"><div class="blokskienknop">Fischi's Ski Academy</div></a>
               </div>
           </div>
         </div>
