--- a/PO/Skien.html
+++ b/PO/Skien.html
@@ -10,7 +10,8 @@
         <div class="containers" id="containernavigatiebalk">
            <a href="Homepage.html"><div id="homebutton"><img src="images/flachaulogo.png" id="flachaulogo"></div></a>
            <a href="Skien.html"><div class="navigatiebalk">Skiën</div></a>
-           <a href="SkiAmade.html"><div class="navigatiebalk">Ski Amade</div></a>
+           <a href="Het Skigebied.html"><div class="navigatiebalk">Het gebied
+           </div></a>
            <a href="Accomodaties.html"><div class="navigatiebalk">Accomodaties</div></a>
         </div>
     </header>  
@@ -26,7 +27,7 @@
         </div>
         <div class="containers" id="containerblokskien">
           <div class="blokkenskien" id="blokskihuur">
-              <div class="blokskienhoofdtekst containers"><img src="images/icons/Skis_icon.png" class="iconsskien">skis huren</div>
+              <div class="blokskienhoofdtekst containers"><img src="images/icons/Skis_icon.png" class="iconsskien">Skis huren</div>
               <div class="blokskientekst">tekst</div>
               <div class="containerblokskienknop containers">
                  <a href="https://www.intersportrent.at/skirent-flachau~12478" target="_blank"><div class="blokskienknop">Intersport Rent Flachau</div></a>
@@ -34,14 +35,14 @@
               </div>
           </div>
           <div class="blokkenskien" id="blokskipas">
-              <div class="blokskienhoofdtekst containers"><img src="images/icons/Ticket_icon.png" class="iconsskien">ski passen</div>
+              <div class="blokskienhoofdtekst containers"><img src="images/icons/Ticket_icon.png" class="iconsskien">Ski passen</div>
               <div class="blokskientekst">tekst</div>
               <div class="containerblokskienknop containers">
                  <a href="https://www.snow-space.com/en/winter/skitickets" target="_blank"><div class="blokskienknop">Snow Space Salzburg<br>Skipassen</div></a>
               </div>
           </div>
           <div class="blokkenskien" id="blokskiles">
-              <div class="blokskienhoofdtekst containers"><img src="images/icons/Skiclass_icon.png" class="iconsskien">skilessen</div>
+              <div class="blokskienhoofdtekst containers"><img src="images/icons/Skiclass_icon.png" class="iconsskien">Skilessen</div>
               <div class="blokskientekst">tekst</div>
               <div class="containerblokskienknop containers">
                  <a href="https://www.skischuleflachau.at/onze-skischool.html?gad_source=1&gad_campaignid=22917690841&gclid=EAIaIQobChMIj9To4ePpkAMV8ZiDBx2Fyzm3EAAYASAAEgIPnPD_BwE" target="_blank"><div class="blokskienknop">Schischule Flachau</div></a>
