--- a/PO/Het Skigebied.html
+++ b/PO/Het Skigebied.html
@@ -2,7 +2,7 @@
 <html lang="nl">
     <head>
         <meta charset="utf-8">
-        <title>Ski Amade</title>
+        <title>Het gebied</title>
         <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="css/vormgeving.css">
     </head>
@@ -10,12 +10,13 @@
         <div class="containers" id="containernavigatiebalk">
            <a href="Homepage.html"><div id="homebutton"><img src="images/flachaulogo.png" id="flachaulogo"></div></a>
            <a href="Skien.html"><div class="navigatiebalk">Skiën</div></a>
-           <a href="SkiAmade.html"><div class="navigatiebalk">Ski Amade</div></a>
+           <a href="Het Skigebied.html"><div class="navigatiebalk">Het gebied</div></a>
            <a href="Accomodaties.html"><div class="navigatiebalk">Accomodaties</div></a>
         </div>
     </header>  
     <body>
-       <h1>SKI AMADE</h1>
+        <img src="images/Skigebiedfoto.jpg">
+       <h1>Het Skigebied</h1>
     </body>
     <footer>
         <div id="footerlijn"></div>
