--- a/PO/Homepage.html
+++ b/PO/Homepage.html
@@ -10,7 +10,7 @@
         <div class="containers" id="containernavigatiebalk">
            <a href="Homepage.html"><div id="homebutton"><img src="images/flachaulogo.png" id="flachaulogo"></div></a>
            <a href="Skien.html"><div class="navigatiebalk">Skiën</div></a>
-           <a href="SkiAmade.html"><div class="navigatiebalk">Ski Amade</div></a>
+           <a href="Het Skigebied.html"><div class="navigatiebalk">Het gebied</div></a>
            <a href="Accomodaties.html"><div class="navigatiebalk">Accomodaties</div></a>
         </div>
     </header>  
