--- a/PO/Het Skigebied.html
+++ b/PO/Het Skigebied.html
@@ -15,8 +15,24 @@
         </div>
     </header>  
     <body>
-        <img src="images/Skigebiedfoto.jpg">
-       <h1>Het Skigebied</h1>
+        <div class="containerfoto containers" id="containerfotogebied">
+            <img src="images/gebiedfoto.webp">
+            <div class="bannertekstskien">
+            <h1>Dorpen in het Skigebied</h1>
+            </div>
+        </div>
+        <div class="containers containerblokkendorpen">
+            <div class="blokdorpen" id="blokdorp1"><h3>Flachau</h3><p>Het hart van Ski Amadé! Flachau staat bekend om zijn perfecte pistes, levendige après-ski en moderne liften. Ideaal voor zowel gezinnen als fanatieke wintersporters die comfort en sfeer zoeken.</p></div>
+            <div class="blokdorpen" id="blokdorp2"><h3>Zauchensee</h3><p>Hooggelegen en sneeuwzeker – Zauchensee is een paradijs voor de echte liefhebber. Rustiger dan Flachau, maar met uitdagende afdalingen en een prachtig bergdecor. Hier ski je letterlijk tussen de toppen!</p></div>
+            <div class="blokdorpen" id="blokdorp3"><h3>Eben im Pongau</h3><p>Een charmant dorp met directe toegang tot de omliggende skigebieden. Eben im Pongau is ideaal voor gezinnen en rustzoekers die graag centraal willen verblijven in Ski Amadé.</p></div>
+            <div class="blokdorpen" id="blokdorp4"><h3>Filzmoos</h3><p>Sprookjesachtig en authentiek – Filzmoos ligt wat hoger en ademt Oostenrijkse gezelligheid. Perfect voor langlaufers, winterwandelaars en iedereen die van een knusse wintersfeer houdt.</p></div>
+        </div>
+        <div class="containers containerblokkendorpen">
+            <div class="blokdorpen" id="blokdorp5"><h3>Kleinarl</h3><p>Rustig, sfeervol en direct verbonden met Flachauwinkl. Kleinarl is een heerlijke uitvalsbasis voor avonturiers die houden van natuur, brede pistes en een ontspannen dorpsgevoel.</p></div>
+            <div class="blokdorpen" id="blokdorp6"><h3>Radstadt</h3><p>Een historisch stadje met charme en karakter. Radstadt combineert cultuur met wintersport: van sfeervolle straatjes tot goed geprepareerde pistes en een prachtige rodelbaan.</p></div>
+            <div class="blokdorpen" id="blokdorp7"><h3>St. Johann</h3><p>Een levendige plaats met een breed aanbod aan winkels, restaurants en recreatie. Ideaal voor wie graag combineert: skiën overdag, gezelligheid en ontspanning ’s avonds.</p></div>
+            <div class="blokdorpen" id="blokdorp8"><h3>Wagrain</h3><p>Modern, veelzijdig en perfect verbonden met Flachau. Wagrain biedt alles: fijne hotels, een groot skigebied, een gezellig centrum en de populaire waterwereld Wasserwelt Wagrain voor ontspanning na het skiën.</p></div>
+        </div>
     </body>
     <footer>
         <div id="footerlijn"></div>
