--- a/PO/Het Skigebied.html
+++ b/PO/Het Skigebied.html
@@ -18,10 +18,18 @@
         <div class="containerfoto containers" id="containerfotogebied">
             <img src="images/gebiedfoto.webp">
             <div class="bannertekstskien">
-            <h1>Dorpen in het Skigebied</h1>
+            <h1>Het Skigebied Flachau</h1>
             </div>
         </div>
-        <div class="containers containerblokkendorpen">
+        <div class="standaardcontainer" id="containerteksthetskigebied">
+            <div><p>Het skigebied Flachau is uitstekend bereikbaar en goed georganiseerd. 
+            <br>Alle dorpen zijn met elkaar verbonden via gratis skibussen en moderne liften, waardoor je eenvoudig het hele gebied kunt verkennen. 
+            <br>In elk dorp vind je skischolen voor alle niveaus, evenals verhuurwinkels met het nieuwste materiaal. 
+            <br>Kom je met de auto, dan zijn er ruime parkeermogelijkheden, en wie met de trein reist kan uitstappen in Radstadt of St. Johann im Pongau. 
+            <br>Kortom: alles is geregeld voor een zorgeloze wintersportvakantie.</p></div>
+        </div>
+        <h2 id="hoofdtekstdorpen">Dorpen in het skigebied</h2>
+        <div class="containers containerblokkendorpen" id="skigebieddorpen">
             <div class="blokdorpen" id="blokdorp1"><h3>Flachau</h3><p>Het hart van Ski Amadé! Flachau staat bekend om zijn perfecte pistes, levendige après-ski en moderne liften. Ideaal voor zowel gezinnen als fanatieke wintersporters die comfort en sfeer zoeken.</p></div>
             <div class="blokdorpen" id="blokdorp2"><h3>Zauchensee</h3><p>Hooggelegen en sneeuwzeker – Zauchensee is een paradijs voor de echte liefhebber. Rustiger dan Flachau, maar met uitdagende afdalingen en een prachtig bergdecor. Hier ski je letterlijk tussen de toppen!</p></div>
             <div class="blokdorpen" id="blokdorp3"><h3>Eben im Pongau</h3><p>Een charmant dorp met directe toegang tot de omliggende skigebieden. Eben im Pongau is ideaal voor gezinnen en rustzoekers die graag centraal willen verblijven in Ski Amadé.</p></div>
