--- a/PO/Skien.html
+++ b/PO/Skien.html
@@ -28,7 +28,7 @@
         <div class="containers" id="containerblokskien">
           <div class="blokkenskien" id="blokskihuur">
               <div class="blokskienhoofdtekst containers"><img src="images/icons/Skis_icon.png" class="iconsskien">Skis huren</div>
-              <div class="blokskientekst">tekst</div>
+              <div class="blokskientekst"><p>Huur eenvoudig je ski’s, snowboards en accessoires direct in Flachau. Of je nu beginner bent of gevorderde, bij onze betrouwbare verhuurpartners vind je altijd het juiste materiaal — perfect afgestemd op jouw niveau en stijl.</p></div>
               <div class="containerblokskienknop containers">
                  <a href="https://www.intersportrent.at/skirent-flachau~12478" target="_blank"><div class="blokskienknop">Intersport Rent Flachau</div></a>
                  <a href="https://www.sport2000rent.com/nl/skiverhuur/locaties/oostenrijk/salzburg/flachau" target="_blank"><div class="blokskienknop">Sport 2000 Rent</div></a>
@@ -36,14 +36,14 @@
           </div>
           <div class="blokkenskien" id="blokskipas">
               <div class="blokskienhoofdtekst containers"><img src="images/icons/Ticket_icon.png" class="iconsskien">Ski passen</div>
-              <div class="blokskientekst">tekst</div>
+              <div class="blokskientekst"><p>Regel je skipas snel en zonder zorgen! Koop je pas vooraf online en ga direct de piste op zodra je aankomt. Zo bespaar je tijd én profiteer je vaak van voordelige online tarieven in het Snow Space Salzburg gebied.</p></div>
               <div class="containerblokskienknop containers">
                  <a href="https://www.snow-space.com/en/winter/skitickets" target="_blank"><div class="blokskienknop">Snow Space Salzburg<br>Skipassen</div></a>
               </div>
           </div>
           <div class="blokkenskien" id="blokskiles">
               <div class="blokskienhoofdtekst containers"><img src="images/icons/Skiclass_icon.png" class="iconsskien">Skilessen</div>
-              <div class="blokskientekst">tekst</div>
+              <div class="blokskientekst"><p>Maak van je wintersport een succes met professionele skilessen in Flachau. Onze ervaren instructeurs helpen je veilig en met plezier de juiste techniek te leren — voor kinderen, volwassenen en elk niveau.</p></div>
               <div class="containerblokskienknop containers">
                  <a href="https://www.skischuleflachau.at/onze-skischool.html?gad_source=1&gad_campaignid=22917690841&gclid=EAIaIQobChMIj9To4ePpkAMV8ZiDBx2Fyzm3EAAYASAAEgIPnPD_BwE" target="_blank"><div class="blokskienknop">Schischule Flachau</div></a>
                  <a href="https://www.fischis-skischule.at/nl/?gad_source=1&gad_campaignid=69419262&gclid=EAIaIQobChMIj9To4ePpkAMV8ZiDBx2Fyzm3EAAYAiAAEgJTgfD_BwE" target="_blank"><div class="blokskienknop">Fischi's Ski Academy</div></a>
