--- a/PO/Homepage.html
+++ b/PO/Homepage.html
@@ -72,7 +72,7 @@
                 </div>
                 <div class="tekstinfoblok">
                 </div>
-                <a href=""><div class="knopinfoblok">
+                <a href="Het Skigebied.html#skigebieddorpen"><div class="knopinfoblok">
                     knop
                 </div></a>
             </div>
